<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:gravity="center"
    tools:context=".ui.page.signup.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="100dp"
            android:layout_gravity="center"
            android:layout_height="100dp"
            android:src="@drawable/ic_whatsapp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_name"
            android:id="@+id/editTextPersonName"
            android:textSize="16sp"
            android:background="@color/white"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:layout_marginTop="15dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_email"
            android:textSize="16sp"
            android:id="@+id/editTextEmail"
            android:background="@color/white"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:layout_marginTop="15dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_password"
            android:password="true"
            android:textSize="16sp"
            android:id="@+id/editTextPassword"
            android:inputType="textPassword"
            android:background="@color/white"
            android:padding="10dp"
            android:layout_marginTop="15dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/lbl_a_ready_have_acount"
            android:padding="3dp"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            android:id="@+id/mtxtAreadyAcount"
            android:textSize="14sp"/>
        <androidx.appcompat.widget.AppCompatButton
            android:background="@color/h034941"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:id="@+id/btnSignUp"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/lbl_signup"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="25dp"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatButton
                android:background="@color/white"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:drawableLeft="@drawable/ic_google"
                android:text="@string/lbl_google"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:paddingLeft="10dp"
                android:id="@+id/btnGoogle"
                android:layout_marginRight="7dp"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"/>
            <androidx.appcompat.widget.AppCompatButton
                android:background="@color/purple_700"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:text="@string/lbl_facebook"
                android:paddingLeft="10dp"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:id="@+id/btnFaceBook"
                android:drawableLeft="@drawable/ic_facebook"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/h034941"
            android:id="@+id/txtSignUpWithPhone"
            android:text="@string/lbl_signup_phone"
            android:layout_marginTop="25dp"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            android:textSize="16sp"
            android:textStyle="bold"/>
    </LinearLayout>

</LinearLayout>