<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.page.signup.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_whatsapp" />

        <EditText
            android:id="@+id/editTextEmailOrPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@color/white"
            android:hint="@string/lbl_email_or_phone"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@color/white"
            android:hint="@string/lbl_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:password="true"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:id="@+id/mTxtSignUp"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            android:padding="3dp"
            android:text="@string/lbl_click_for_sign_up"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignIn"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            android:background="@color/h034941"
            android:text="@string/lbl_signin"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnGoogle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginRight="7dp"
                android:layout_weight="1"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:background="@color/white"
                android:drawableLeft="@drawable/ic_google"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:text="@string/lbl_google"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnFaceBook"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:background="@color/purple_700"
                android:drawableLeft="@drawable/ic_facebook"
                android:paddingLeft="10dp"
                android:text="@string/lbl_facebook"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/txtSignUpWithPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            android:layout_marginTop="25dp"
            android:text="@string/lbl_signup_phone"
            android:textColor="@color/h034941"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>